// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`applications create applicant Applicant email GET /applicant-email should render the page if there is data in the session 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <h2 class=\\"govuk-heading-l\\"> What’s the applicant’s email address?</h2>
    <form method=\\"post\\" action=\\"\\" novalidate=\\"novalidate\\" class=\\"pins-applications-create\\">
        <div class=\\"govuk-form-group\\">
            <div id=\\"applicant.email-hint\\" class=\\"govuk-hint\\">for example, contact@buildinganewbridge.com</div>
            <input class=\\"govuk-input govuk-!-width-one-third\\"
            id=\\"applicant.email\\" name=\\"applicant.email\\" type=\\"text\\" aria-describedby=\\"applicant.email-hint\\">
        </div>
        <div class=\\"govuk-grid-row\\">
            <div class=\\"govuk-button-group pins-button-group govuk-grid-column-one-half\\"><a class=\\"govuk-link\\" href=\\"/applications-service/create-new-case/123/applicant-information-types/\\">Back</a>
                <button                 class=\\"govuk-button\\" data-module=\\"govuk-button\\">Save and continue</button>
            </div>
        </div>
    </form>
</main>"
`;

exports[`applications create applicant Applicant email POST /application-email Web-side validation: should show validation errors if an invalid email is input 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-two-thirds\\">
            <div class=\\"govuk-error-summary\\" aria-labelledby=\\"error-summary-title\\"
            role=\\"alert\\" data-module=\\"govuk-error-summary\\">
                <h2 class=\\"govuk-error-summary__title\\" id=\\"error-summary-title\\"> There is a problem</h2>
                <div class=\\"govuk-error-summary__body\\">
                    <ul class=\\"govuk-list govuk-error-summary__list\\">
                        <li><a href=\\"#applicant.email\\">Enter a valid email address</a>
                        </li>
                    </ul>
                </div>
            </div>
        </div>
    </div>
    <h2 class=\\"govuk-heading-l\\"> What’s the applicant’s email address?</h2>
    <form method=\\"post\\" action=\\"\\" novalidate=\\"novalidate\\" class=\\"pins-applications-create\\">
        <div class=\\"govuk-form-group govuk-form-group--error\\">
            <div id=\\"applicant.email-hint\\" class=\\"govuk-hint\\">for example, contact@buildinganewbridge.com</div>
            <p id=\\"applicant.email-error\\"
            class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span> Enter a valid email address</p>
            <input             class=\\"govuk-input govuk-!-width-one-third govuk-input--error\\" id=\\"applicant.email\\"
            name=\\"applicant.email\\" type=\\"text\\" value=\\"bad_email_address\\" aria-describedby=\\"applicant.email-hint applicant.email-error\\">
        </div>
        <div class=\\"govuk-grid-row\\">
            <div class=\\"govuk-button-group pins-button-group govuk-grid-column-one-half\\"><a class=\\"govuk-link\\" href=\\"/applications-service/create-new-case/123/team-email/\\">Back</a>
                <button                 class=\\"govuk-button\\" data-module=\\"govuk-button\\">Save and continue</button>
            </div>
        </div>
    </form>
</main>"
`;

exports[`applications create applicant Applicant telephone number GET /applicant-telephone-number should render the page if there is data in the session 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <h2 class=\\"govuk-heading-l\\"> What’s the applicant’s phone number?</h2>
    <form method=\\"post\\" action=\\"\\" novalidate=\\"novalidate\\" class=\\"pins-applications-create\\">
        <div class=\\"govuk-form-group\\">
            <div id=\\"applicant.phoneNumber-hint\\" class=\\"govuk-hint\\">for example, 0300 123 3000</div>
            <input class=\\"govuk-input govuk-!-width-one-third\\"
            id=\\"applicant.phoneNumber\\" name=\\"applicant.phoneNumber\\" type=\\"text\\" aria-describedby=\\"applicant.phoneNumber-hint\\">
        </div>
        <div class=\\"govuk-grid-row\\">
            <div class=\\"govuk-button-group pins-button-group govuk-grid-column-one-half\\"><a class=\\"govuk-link\\" href=\\"/applications-service/create-new-case/123/applicant-information-types/\\">Back</a>
                <button                 class=\\"govuk-button\\" data-module=\\"govuk-button\\">Save and continue</button>
            </div>
        </div>
    </form>
</main>"
`;

exports[`applications create applicant Applicant telephone number POST /application-telephone-number Web-side validation: should show validation errors if an invalid telephone number is input 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-two-thirds\\">
            <div class=\\"govuk-error-summary\\" aria-labelledby=\\"error-summary-title\\"
            role=\\"alert\\" data-module=\\"govuk-error-summary\\">
                <h2 class=\\"govuk-error-summary__title\\" id=\\"error-summary-title\\"> There is a problem</h2>
                <div class=\\"govuk-error-summary__body\\">
                    <ul class=\\"govuk-list govuk-error-summary__list\\">
                        <li><a href=\\"#applicant.phoneNumber\\">Enter a phone number e.g. 01632 960 001, 07700 900 982 or +44 808 157 0192</a>
                        </li>
                    </ul>
                </div>
            </div>
        </div>
    </div>
    <h2 class=\\"govuk-heading-l\\"> What’s the applicant’s phone number?</h2>
    <form method=\\"post\\" action=\\"\\" novalidate=\\"novalidate\\" class=\\"pins-applications-create\\">
        <div class=\\"govuk-form-group govuk-form-group--error\\">
            <div id=\\"applicant.phoneNumber-hint\\" class=\\"govuk-hint\\">for example, 0300 123 3000</div>
            <p id=\\"applicant.phoneNumber-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span> Enter a phone number
                e.g. 01632 960 001, 07700 900 982 or +44 808 157 0192</p>
            <input class=\\"govuk-input govuk-!-width-one-third govuk-input--error\\"
            id=\\"applicant.phoneNumber\\" name=\\"applicant.phoneNumber\\" type=\\"text\\" value=\\"bad_phone_number\\"
            aria-describedby=\\"applicant.phoneNumber-hint applicant.phoneNumber-error\\">
        </div>
        <div class=\\"govuk-grid-row\\">
            <div class=\\"govuk-button-group pins-button-group govuk-grid-column-one-half\\"><a class=\\"govuk-link\\" href=\\"/applications-service/create-new-case/123/team-email/\\">Back</a>
                <button                 class=\\"govuk-button\\" data-module=\\"govuk-button\\">Save and continue</button>
            </div>
        </div>
    </form>
</main>"
`;

exports[`applications create applicant GET /applicant-full-name should render the page if there is data in the session 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <h2 class=\\"govuk-heading-l\\"> What is the applicant’s full name?</h2>
    <form method=\\"post\\" action=\\"\\" novalidate=\\"novalidate\\" class=\\"pins-applications-create\\">
        <div class=\\"govuk-form-group\\">
            <label class=\\"govuk-label font-weight--700\\" for=\\"applicant.firstName\\">First name</label>
            <input class=\\"govuk-input govuk-!-width-one-third\\" id=\\"applicant.firstName\\"
            name=\\"applicant.firstName\\" type=\\"text\\">
        </div>
        <div class=\\"govuk-form-group\\">
            <label class=\\"govuk-label font-weight--700\\" for=\\"applicant.middleName\\">Middle name (optional)</label>
            <input class=\\"govuk-input govuk-!-width-one-third\\"
            id=\\"applicant.middleName\\" name=\\"applicant.middleName\\" type=\\"text\\">
        </div>
        <div class=\\"govuk-form-group\\">
            <label class=\\"govuk-label font-weight--700\\" for=\\"applicant.lastName\\">Last name</label>
            <input class=\\"govuk-input govuk-!-width-one-third\\" id=\\"applicant.lastName\\"
            name=\\"applicant.lastName\\" type=\\"text\\">
        </div>
        <div class=\\"govuk-grid-row\\">
            <div class=\\"govuk-button-group pins-button-group govuk-grid-column-one-half\\"><a class=\\"govuk-link\\" href=\\"/applications-service/create-new-case/123/applicant-information-types/\\">Back</a>
                <button                 class=\\"govuk-button\\" data-module=\\"govuk-button\\">Save and continue</button>
            </div>
        </div>
    </form>
</main>"
`;

exports[`applications create applicant GET /applicant-information-types should render the page 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <h2 class=\\"govuk-heading-l\\"> Choose the type of Applicant information you can give</h2>
    <form method=\\"post\\" action=\\"\\" novalidate=\\"novalidate\\" class=\\"pins-applications-create\\">
        <div class=\\"govuk-form-group\\">
            <div class=\\"govuk-checkboxes\\" data-module=\\"govuk-checkboxes\\">
                <div class=\\"govuk-checkboxes__item\\">
                    <input class=\\"govuk-checkboxes__input\\" id=\\"selectedApplicantInfoTypes\\"
                    name=\\"selectedApplicantInfoTypes[]\\" type=\\"checkbox\\" value=\\"applicant-organisation-name\\">
                    <label class=\\"govuk-label govuk-checkboxes__label\\" for=\\"selectedApplicantInfoTypes\\">Organisation name</label>
                </div>
                <div class=\\"govuk-checkboxes__item\\">
                    <input class=\\"govuk-checkboxes__input\\" id=\\"selectedApplicantInfoTypes-2\\"
                    name=\\"selectedApplicantInfoTypes[]\\" type=\\"checkbox\\" value=\\"applicant-full-name\\">
                    <label class=\\"govuk-label govuk-checkboxes__label\\" for=\\"selectedApplicantInfoTypes-2\\">First and last name of the Applicant</label>
                </div>
                <div class=\\"govuk-checkboxes__item\\">
                    <input class=\\"govuk-checkboxes__input\\" id=\\"selectedApplicantInfoTypes-3\\"
                    name=\\"selectedApplicantInfoTypes[]\\" type=\\"checkbox\\" value=\\"applicant-address\\">
                    <label class=\\"govuk-label govuk-checkboxes__label\\" for=\\"selectedApplicantInfoTypes-3\\">Address</label>
                </div>
                <div class=\\"govuk-checkboxes__item\\">
                    <input class=\\"govuk-checkboxes__input\\" id=\\"selectedApplicantInfoTypes-4\\"
                    name=\\"selectedApplicantInfoTypes[]\\" type=\\"checkbox\\" value=\\"applicant-website\\">
                    <label class=\\"govuk-label govuk-checkboxes__label\\" for=\\"selectedApplicantInfoTypes-4\\">Website</label>
                </div>
                <div class=\\"govuk-checkboxes__item\\">
                    <input class=\\"govuk-checkboxes__input\\" id=\\"selectedApplicantInfoTypes-5\\"
                    name=\\"selectedApplicantInfoTypes[]\\" type=\\"checkbox\\" value=\\"applicant-email\\">
                    <label class=\\"govuk-label govuk-checkboxes__label\\" for=\\"selectedApplicantInfoTypes-5\\">Email address</label>
                </div>
                <div class=\\"govuk-checkboxes__item\\">
                    <input class=\\"govuk-checkboxes__input\\" id=\\"selectedApplicantInfoTypes-6\\"
                    name=\\"selectedApplicantInfoTypes[]\\" type=\\"checkbox\\" value=\\"applicant-telephone-number\\">
                    <label class=\\"govuk-label govuk-checkboxes__label\\" for=\\"selectedApplicantInfoTypes-6\\">Telephone number</label>
                </div>
            </div>
        </div>
        <div class=\\"govuk-grid-row\\">
            <div class=\\"govuk-button-group pins-button-group govuk-grid-column-one-half\\"><a class=\\"govuk-link\\" href=\\"/applications-service/create-new-case/123/team-email/\\">Back</a>
                <button                 class=\\"govuk-button\\" data-module=\\"govuk-button\\">Save and continue</button>
            </div>
        </div>
    </form>
</main>"
`;

exports[`applications create applicant GET /applicant-organisation-name should render the page if there is data in the session 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <h2 class=\\"govuk-heading-l\\"> What is the applicant’s organisation?</h2>
    <form method=\\"post\\" action=\\"\\" novalidate=\\"novalidate\\" class=\\"pins-applications-create\\">
        <div class=\\"govuk-form-group\\">
            <input class=\\"govuk-input govuk-!-width-one-third\\" id=\\"applicant.organisationName\\"
            name=\\"applicant.organisationName\\" type=\\"text\\">
        </div>
        <div class=\\"govuk-grid-row\\">
            <div class=\\"govuk-button-group pins-button-group govuk-grid-column-one-half\\"><a class=\\"govuk-link\\" href=\\"/applications-service/create-new-case/123/applicant-information-types/\\">Back</a>
                <button                 class=\\"govuk-button\\" data-module=\\"govuk-button\\">Save and continue</button>
            </div>
        </div>
    </form>
</main>"
`;
